Updated bookmark form, add bookmark button is now disabled until form is changed. Android: fixed bug where keyboard hides field in focus. Android: fixed visual issues when QR scanner is shown/hidden. Android: fixed bug where tapping a bookmark selects it as well as opening it. Android: fixed bug where large bookmarks can overflow.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -947,7 +947,6 @@ body {
         border-radius: $border-radius-well;
         padding: 0;
         margin: 0 0 0.75rem;
-        max-height: 9rem;
         @include box-shadow;
 
         &:focus,
